[gd_scene load_steps=11 format=2]

[ext_resource path="res://Powerups/LaserGun/LaserGun.gd" type="Script" id=1]
[ext_resource path="res://Powerups/LaserGun/laser icon.png" type="Texture" id=2]
[ext_resource path="res://Powerups/LaserGun/lasergun_color.png" type="Texture" id=3]
[ext_resource path="res://Powerups/LaserGun/lasergun_normal.png" type="Texture" id=4]
[ext_resource path="res://Powerups/LaserGun/Guns.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.2608, 41.442 )

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
render_mode blend_add, unshaded;

void fragment() {
	COLOR = vec4(0.0, 1.0, 0.0, pow(SCREEN_UV.x, 16.0));
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "Jetison"
tracks/0/type = "value"
tracks/0/path = NodePath("TopGun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -232.453 ), Vector2( 0, -432.453 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopGun:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomGun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 232.453 ), Vector2( 0, 432.453 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BottomGun:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -45.049 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("Timer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[node name="LaserGun" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )
icon = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -94.41, -41.87, 190.28, 83.96 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.711608, 0.711608 )
texture = ExtResource( 3 )
normal_map = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="BackgroundSprite" type="Sprite" parent="."]
visible = false
material = SubResource( 4 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="Guns" type="Node2D" parent="."]
visible = false
scale = Vector2( 0.406, 0.406 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="TopGun" type="Node2D" parent="Guns"]
editor/display_folded = true
position = Vector2( 0, -232.453 )

[node name="Position2D" type="Position2D" parent="Guns/TopGun"]
position = Vector2( -160.726, -22.379 )

[node name="Sprite" type="Sprite" parent="Guns/TopGun"]
position = Vector2( -32.334, 0 )
texture = ExtResource( 3 )
normal_map = ExtResource( 4 )

[node name="BottomGun" type="Node2D" parent="Guns"]
editor/display_folded = true
position = Vector2( 0, 232.453 )
scale = Vector2( 1, -1 )

[node name="Position2D" type="Position2D" parent="Guns/BottomGun"]
position = Vector2( -160.726, -22.379 )

[node name="Sprite" type="Sprite" parent="Guns/BottomGun"]
position = Vector2( -32.334, 0 )
texture = ExtResource( 3 )
normal_map = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Guns"]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Guns"]
anims/Jetison = SubResource( 5 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
scale = Vector2( 0.406, 0.406 )
remote_path = NodePath("../Guns")
update_rotation = false

[connection signal="timeout" from="Guns/Timer" to="Guns" method="_on_Timer_timeout"]
